[package]
name = "human-readable-time"
version = "0.3.0"
authors = ["Tim Janke <tim+github@janke.biz>"]
edition = "2021"
description = "A data structure for managing a human readable time"
documentation = "https://docs.rs/human-readable-time"
license = "MIT"
readme = "README.md"
repository = "https://github.com/flying7eleven/human-readable-time"
keywords = ["time", "duration", "datatype", "type"]
categories = ["value-formatting", "rust-patterns", "data-structures"]
exclude = [".github/", ".gitignore"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
duration = ["chrono"]

[dependencies.lazy_static]
version = "1.4.0"
default-features = false

[dependencies.regex]
version = "1.5.4"
default-features = false
features = ["std"]

[dependencies.chrono]
version = "0.4.19"
optional = true
default-features = false